MEM-242 - MMTI Implement Content Links
- Added reclamation-and-securities.html
- Fixed issues with production.js (removed references to old bootstrap / jquery)
- Fixed some issues with the mines.list.html

--- a/modules/compliance-oversight/client/views/compliance-oversight.html
+++ b/modules/compliance-oversight/client/views/compliance-oversight.html
@@ -1,6 +1,4 @@
 
-<!-- Compliance Oversight Page -->
-
 <div class="hero-banner">
     <div class="container">
         <div class="container-inner">
@@ -16,7 +14,7 @@
     <div class="row">
         <main class="col-lg-8">
             <section>
-                <h2>Integrated Oversight of BC's Mining Sector</h2>
+                <h2>Integrated Oversight of British Columbia's Mining Sector</h2>
                 <p>The Ministry of Energy and Mines (MEM), Ministry of Environment (MOE), Environmental Assessment Office (EAO) and Ministry of Forests, Lands and Natural Resource Operations (FLNRO) work together to provide integrated oversight of British Columbia’s mining sector. Compliance and enforcement (C&amp;E) activities begin after a claim is staked and continue through exploration and the life of a mine.</p>
                 <p>MEM’s oversight responsibilities under the Mines Act generally apply within the mine site boundary defined in the Mines Act permit /associated amendments. MEM Inspectors of Mines regularly conduct field inspections to make sure that mines are complying with the Mines Act, the Health, Safety and Reclamation Code for Mines in British Columbia, other codes and standards such as the Canadian Electrical Code, and site-specific Mines Act permit conditions. Some MEM inspections are specialized (e.g., occupational health inspections, geotechnical inspections) while others are more general in scope.</p>
                 <p>MOE’s responsibilities under the Environmental Management Act are typically limited to actual or potential environmental impacts beyond the mine site boundary.</p>
