--- a/modules/core/client/scss/components/hero-banner.scss
+++ b/modules/core/client/scss/components/hero-banner.scss
@@ -20,8 +20,8 @@
 @media (min-width: 760px) {
     .hero-banner {
         height: 30rem;
-        background-position: center 3rem;
-        background-size: 105%;
+        background-position: center;
+        background-size: 120%;
 
         .container {
             padding-left: 2rem;
