--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="container-inner">
             <div class="hb-txt">
-                <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">V 2.0</span></h1>
+                <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">BETA</span></h1>
                 <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                 <div class="hb-btns">
                     <a class="btn slide-l-btn hero-btn inverted" href ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <section class="about-info">
-                        <h2>About BC Mine Information</h2>
+                        <h2>About B.C. Mine Information</h2>
                         <p>The Ministry of Energy and Mines (MEM), the Ministry of Environment (ENV) and the Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia more accessible than ever before.</p>
                         <p>This is the first time mine-related information from all three agencies has been made available online in one place, and more information will be added on an ongoing basis.</p>
                         <p>This site currently profiles 15 major mines across the province (7 operating metal mines, 6 operating coal mines, and 2 under construction metal mines). Other permitted major mines in BC will be added in the coming months.</p>
