--- a/modules/projects/client/scss/projects.scss
+++ b/modules/projects/client/scss/projects.scss
@@ -24,7 +24,7 @@
     .ah-col {
         &.commodity {
             width: 9.5rem;
-            text-align: center;
+            text-align: right;
         }
 
         &.operator {
