--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="anchor-point">
         <div class="row">
             <main class="col-lg-8">
                 <section>
@@ -31,7 +31,7 @@
                                     <span class="sort-icon" ng-show="sorting.column === 'operator'"></span>
                                 </div>
                                 <div class="sh-col commodity sortable" ng-class="{'descending': !sorting.ascending}" ng-click="sortBy('commodity')">
-                                    <span>Commodity Type</span>
+                                    <span>Commodity</span>
                                     <span class="sort-icon" ng-show="sorting.column === 'commodity'"></span>
                                 </div>
                             </div>
