--- a/modules/topics/client/views/topics-of-interest.html
+++ b/modules/topics/client/views/topics-of-interest.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container" id="anchor-top">
     <div class="row">
         <main class="col-lg-8">
             <section>
@@ -20,21 +20,21 @@
             <section>
                 <h3>Water Quality</h3>
                 <p>Mines that release effluent can potentially cause changes to the receiving environment. Released effluent may impact the water quality in streams, lakes and groundwater, which in turn has the potential to affect local aquatic life and/or other water uses.</p>
-                <a class="btn gold" href="water-quality.html">Learn More</a>
+                <a class="btn gold" ui-sref="water-quality">Learn More</a>
             </section>
             <section>
                 <h3>Tailings Management</h3>
                 <p>Tailings are a by-product of mining. They are finely ground rock and mineral particles that remain following processing and extraction of targeted resources (e.g., minerals containing metals such as copper or gold), and they may also contain chemicals used in the extraction process.</p>
-                <a class="btn gold" href="tailings-management.html">Learn More</a>
+                <a class="btn gold" ui-sref="tailings-management">Learn More</a>
             </section>
             <section>
                 <h3>Reclamation &amp; Securities</h3>
                 <p>Since 1969, companies have been required by law to reclaim all lands disturbed by mining and related activities in British Columbia. BC was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites. BC’s reclamation laws ensure that land, watercourses and cultural heritage resources are returned to a safe and environmentally sound state.</p>
-                <a class="btn gold" href="reclamation-and-securities.html">Learn More</a>
+                <a class="btn gold" ui-sref="reclamation-and-securities">Learn More</a>
             </section>
         </main>
         <aside class="col-lg-4">
-            <section>
+            <section class="mt-0">
                 <h4>Related Documents</h4>
                 <ul class="mmti-side-list">
                     <li>Content TBD</li>
