MEM-233 import data, server API, client consumes API, inspections module, insert inspections directive into mine.html page' git status

--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -122,6 +122,8 @@
                             <p class="tab-intro"
                                ng-bind-html="content(project, 'INTRO_TEXT', 'COMPLIANCE')"></p>
                             <p>Learn more about Compliance Oversight <a ui-sref="compliance-oversight">here</a>.</p>
+                            <tmpl-project-compliance></tmpl-project-compliance>
+                            <!--
                             <section>
                                 <h3>Compliance Oversight <span>January 1 - December 31, 2016<span></h3>
                                 <div class="ce-list">
@@ -314,6 +316,7 @@
                                     </div>
                                 </div>
                             </section>
+                            -->
                         </div>
 
                         <!-- Other Documents -->
