--- a/modules/inspections/client/views/project-inspections.html
+++ b/modules/inspections/client/views/project-inspections.html
@@ -12,15 +12,15 @@
                         <i class="material-icons open-icon">add</i>
                         <i class="material-icons close-icon">remove</i>
                     </a>
-                    <span class="ah-col name">{{c.name}}</span>
-                    <span class="ah-col date">{{c.date}}</span>
+                    <span class="ah-col name">{{c.inspectionName}}</span>
+                    <span class="ah-col date">{{c.inspectionDate | date:'MMM dd, yyyy'}}</span>
                 </div>
             </div>
             <div class="collapse" role="tabpanel"
                  id="collapse-{{c._id}}"
                  aria-labelledby="heading-{{c._id}}">
                 <div class="mmti-accord-body">
-                    <div class="summary">{{c.summary}}</div>
+                    <div class="summary">{{c.inspectionSummary}}</div>
                     <div class="doc-list-container" ng-if="c.related">
                         <div class="mmti-list-header">Related Documents</div>
                         <ul class="mmti-list"  ng-repeat="r in c.related">
