ESM-805: Allow for linking to a specific folder.

--- a/modules/documents/client/views/docs.html
+++ b/modules/documents/client/views/docs.html
@@ -3,5 +3,5 @@
 </div>
 
 <div class="view-body-container file-browser-container">
-	<x-document-mgr x-project="project" >
+	<x-document-mgr x-project="project" x-opendir="opendir">
 </div>
