--- a/modules/inspections/client/views/project-inspections.html
+++ b/modules/inspections/client/views/project-inspections.html
@@ -33,9 +33,9 @@
                  aria-labelledby="heading-{{c._id}}">
                 <div class="mmti-accord-body">
                     <div class="summary">{{c.inspectionSummary}}</div>
-                    <div class="doc-list-container" ng-if="c.related">
+                    <div class="doc-list-container" ng-if="c.followUpDocuments">
                         <div class="mmti-list-header">Related Documents</div>
-                        <ul class="mmti-list"  ng-repeat="r in c.related">
+                        <ul class="mmti-list"  ng-repeat="r in c.followUpDocuments">
                             <li><a href="{{r.ref}}" target="_blank">{{r.name}}</a></li>
                         </ul>
                     </div>
