--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <section class="about-info">
-                        <h2>About B.C. Mine Information</h2>
+                        <h2>About BC Mine Information</h2>
                         <p>The Ministry of Energy and Mines (MEM), the Ministry of Environment (ENV) and the Environmental Assessment Office (EAO) have collaborated to make information on the Province’s oversight of major mines in British Columbia more accessible than ever before.</p>
                         <p>This is the first time mine-related information from all three agencies has been made available online in one place, and more information will be added on an ongoing basis.</p>
                         <p>This site currently profiles 15 major mines across the province (7 operating metal mines, 6 operating coal mines, and 2 under construction metal mines). Other permitted major mines in BC will be added in the coming months.</p>
