--- a/modules/projects/client/views/mine.html
+++ b/modules/projects/client/views/mine.html
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="main">
+<div class="main" id="anchor-point">
     <div class="container">
         <div class="row">
             <main class="col-lg-8">
@@ -41,7 +41,10 @@
                         
                         <!-- Authorizations -->
                         <div class="authorizations tab-pane" id="authorizations" role="tabpanel">
+                            <!-- 
                             <p class="tab-intro" ng-bind-html="content(project, 'INTRO_TEXT', 'AUTHORIZATION')"></p>
+                            -->
+                            <p class="tab-intro">Major mine projects require many authorizations from different federal and provincial agencies. Environmental assessment (EA) certificates and permits issued under the Mines Act and the Environmental Management Act (EMA) are the primary provincial authorizations for major mines in British Columbia. Learn more about Authorizations here.</p>
                             <section class="auth-list-section">
                                 <h3>Environmental Assessment Act <span>Environmental Assessment Office</span></h3>
                                 <ul>
@@ -114,9 +117,12 @@
 
                         <!-- Compliance Oversight -->
                         <div class="compliance tab-pane" id="compliance" role="tabpanel">
+                            <!-- 
                             <p class="tab-intro" ng-bind-html="content(project, 'INTRO_TEXT', 'COMPLIANCE')"></p>
+                            -->
+                            <p class="tab-intro">The Ministry of Energy and Mines (MEM), Ministry of Environment (ENV) and Environmental Assessment Office (EAO) work together to provide integrated oversight of British Columbia’s mining sector. Compliance and enforcement (C&E) activities begin after a claim is staked and continue through exploration and the life of a mine. Learn more about Compliance Oversight here.</p>
                             <section>
-                                <h3>Compliance Oversight <span>January 1 - December 31, 2016<span></h3>
+                                <h3>Inspections <span>January 1 - December 31, 2016<span></h3>
                                 <div class="ce-list">
                                     <div class="sort-header">
                                         <div class="sh-row">
