--- a/modules/projects/client/views/mines.list.html
+++ b/modules/projects/client/views/mines.list.html
@@ -7,6 +7,7 @@
                 <div class="hb-txt">
                     <h1>Find Mines in British Columbia</h1>
                     <p class="mb-2">The BC Mine Information website’s currently includes 15 major mine sites</p>
+                    <a href="#anchor-point" du-smooth-scroll offset="72">Go to bottom</a>
                 </div>
             </div>
         </div>
