--- a/modules/topics/client/views/reclamation-and-securities.html
+++ b/modules/topics/client/views/reclamation-and-securities.html
@@ -4,7 +4,10 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Reclamation &amp; Securities</h1>
-                <p class="mb-2">Tailings are a by-product of mining that must be properly managed to protect people and the environment.</p>
+                <p>British Columbia was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites.</p>
+                <div class="hb-btns">
+                    <a class="btn slide-r-btn hero-btn inverted" href="#anchor-point" du-smooth-scroll offset="72"><span>Read More</span><i class="material-icons">arrow_downward</i></a>
+                </div>
             </div>
         </div>
     </div>
