--- a/modules/topics/client/views/topics-of-interest.html
+++ b/modules/topics/client/views/topics-of-interest.html
@@ -4,20 +4,20 @@
         <div class="container-inner">
             <div class="hb-txt">
                 <h1>Topics of Interest</h1>
-                <p class="mb-2">Learn more about how water, tailings and reclamation activities are managed at major mine sites in British Columbia.</p>
+                <p>Learn more about how water, tailings and reclamation activities are managed at major mine sites in British Columbia.</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container" id="anchor-top">
+<div class="container" id="anchor-point">
     <div class="row">
         <main class="col-lg-8">
             <section>
                 <h2>Protecting resources for future generations</h2>
                 <p>The Province strives to ensure that all mines in British Columbia operate in a safe and environmentally responsible manner that protects heritage and other resources for future generations. This area of the BC Mine Information website profiles key topics of interest regarding mining activities in BC.</p>
             </section>
-            <section>
+            <section id="water">
                 <h3>Water Quality</h3>
                 <p>Mines that release effluent can potentially cause changes to the receiving environment. Released effluent may impact the water quality in streams, lakes and groundwater, which in turn has the potential to affect local aquatic life and/or other water uses.</p>
                 <a class="btn gold" ui-sref="water-quality">Learn More</a>
