--- a/modules/core/client/scss/components/sort-header.scss
+++ b/modules/core/client/scss/components/sort-header.scss
@@ -13,5 +13,36 @@
     .sh-col {
         display: table-cell;
         padding: 0.5rem 1rem;
+
+        &.sortable {
+            transition: background-color ease-out 0.2s;
+            cursor: pointer;
+            user-select: none;
+        }
+
+        .sort-icon {
+            display: inline-block;
+            margin-top: -2px;
+            margin-left: 0.25rem;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 5px 5px 0 5px;
+            border-color: #494949 transparent transparent transparent; 
+            vertical-align: middle;
+        }
+
+        &.descending {
+            .sort-icon {
+                border-width: 0 5px 5px 5px;
+                border-color: transparent transparent #494949 transparent;
+            }
+        }
+
+        &.sortable {
+            &:hover {
+                background-color: #DDD;
+            }
+        }
     }
 }
