MEM-242 - MMTI - Implement Content Links
- Updating site content
- Fixing routes to topics
- Fixing dynamic header scrolling

--- a/modules/topics/client/views/reclamation-and-securities.html
+++ b/modules/topics/client/views/reclamation-and-securities.html
@@ -6,7 +6,7 @@
                 <h1>Reclamation &amp; Securities</h1>
                 <p>British Columbia was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites.</p>
                 <div class="hb-btns">
-                    <a class="btn slide-r-btn hero-btn inverted" href="#anchor-point" du-smooth-scroll offset="72"><span>Read More</span><i class="material-icons">arrow_downward</i></a>
+                    <a class="btn slide-r-btn hero-btn inverted" href="#anchor-point" du-smooth-scroll offset="65"><span>Read More</span><i class="material-icons">arrow_downward</i></a>
                 </div>
             </div>
         </div>
@@ -17,12 +17,24 @@
     <div class="row">
         <main class="col-lg-8">
             <section>
-                <h2>Ensuring effective tailings management at all mine sites in British Columbia</h2>
-                <p>Tailings are a by-product of mining. They are finely ground rock and mineral particles that remain following processing and extraction of targeted resources (e.g., minerals containing metals such as copper or gold), and they may also contain chemicals used in the extraction process.</p>
-                <p>Tailings are different from overburden and waste rock, which is the material (e.g., soil, rock) that is moved during mining activities but not processed.</p>
-                <p>Tailings management is different from mine site to mine site. At most major mines where tailings are produced, the tailings are mixed with water and deposited as a slurry into tailings storage facilities (TSFs). Often TSFs use dams to create capacity to permanently store tailings for the life of the mine and throughout closure. Waste rock is generally stored on mine sites in piles or dumps, but it may also be stored underwater to mitigate metal leaching and acid rock drainage (ML/ARD).</p>
-                <p>Most mining dams in British Columbia are regulated under Part 10 of the Health, Safety and Reclamation Code for Mines in British Columbia (the Code), as established under the Mines Act. Under Part 10.5.3 of the Code, mines with TSFs are required to submit annual Dam Safety Inspections (DSIs) to the Ministry of Energy and Mines (MEM). DSIs for specific mines are available on the BC Mine Information website.</p>
+                <h2>Committed to ensuring BC's resources are returned to an environmentally sound state</h2>
+                <p>Since 1969, companies have been required by law to reclaim all lands disturbed by mining and related activities in British Columbia. BC was one of the first provinces in Canada to enact mine reclamation legislation, and the first to extend this policy to exploration sites. BC’s reclamation laws ensure that land, watercourses and cultural heritage resources are returned to a safe and environmentally sound state.</p>
+                <p>The Ministry of Energy and Mines (MEM) enforces the reclamation provisions of the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96293_01" target="_blank">Mines Act</a> and the <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/health-safety/health-safety-and-reclamation-code-for-mines-in-british-columbia" target="_blank">Health, Safety and Reclamation Code for Mines in British Columbia (the Code)</a> through permit conditions and detailed technical reviews aimed at finding environmentally sound, economically viable solutions that enable British Columbia’s mining industry to remain internationally competitive while maintaining this province’s rigourous environmental standards.</p>
+                <p>Before starting work at a mine site, companies are required to obtain a Mines Act permit approving the mine plan, a program for protection of the land and watercourses, and a reclamation program. Mining companies must also place a <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/reclamation-closure/securities" target="_blank">reclamation security</a> with the Province to ensure reclamation obligations are kept. This security is only returned once the mine site has been reclaimed to a satisfactory level and there are no ongoing monitoring or maintenance requirements.</p>
             </section>
+            <section>
+                <h3>Annual Reclamation Reports (ARRs)</h3>
+                <p>Permittees are required to submit annual reclamation reports (ARRs) to MEM in compliance with their Mines Act permits and the Code. The intent of the ARR is to provide a summary of all activities conducted on the mine property over the previous year. Specifically, the ARR must outline the following:</p>
+                <ul>
+                    <li>Mine development, including surface disturbance, stripping, stockpiling and disposal and storage of all materials.</li>
+                    <li>Activities, research and monitoring results associated with the development and implementation of the Environment Protection Program.</li>
+                    <li>Activities, research and monitoring results associated with the development and implementation of the Reclamation Program.</li>
+                </ul>
+                <p>ARRs must also provide a projection of mining and reclamation activities planned for the following 5 years. Report information is required to be in a specific format, outlined in MEM’s <a href="http://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/reclamation-and-closure/formatrequirements2016.pdf" target="_blank">Annual Reclamation Report Requirements</a>. ARRs for specific mines are available on the BC Mine Information website.</p>
+            </section>
+            <div class="content-links">
+                <a class="btn content-btn slide-l-btn" ui-sref="topics"><i class="material-icons">arrow_back</i><span>Back to Topics</span></a>
+            </div>
         </main>
         <aside class="col-lg-4">
             <section class="mt-0">
@@ -38,7 +50,7 @@
                     <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/reclamation-closure" target="_blank">Reclamation &amp; Closure (Ministry of Energy and Mines)</a></li>
                     <li><a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/reclamation-closure/securities" target="_blank">Securities (Ministry of Energy and Mines)</a></li>
                     <li><a href="http://www.trcr.bc.ca/" target="_blank">British Columbia Technical and Research Committee on Reclamation</a></li>
-                    <li><a href="http://www.teck.com/media/Responsible-Mine-Closure-and-Reclamation.pdf" target="_blank">Responsible Mine Closure and Reclamation (Teck)</a></li>
+                    <li><a href="http://www.teck.com/media/Responsible-Mine-Closure-and-Reclamation.pdf" target="_blank">Responsible Mine Closure and Reclamation (Teck)</li>
                 </ul>
             </section>
         </aside>
